force-app/main/default/objects/SPEN_PartnerAssociation__c/SPEN_PartnerAssociation__c.object-meta.xml
<CustomObject>
    <label>Partner Association</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Partner Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>