force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_AlternativePayeeProcessed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AlternativePayeeProcessed__c</fullName>
    <label>Alternative Payee Processed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>