force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_AssociatedWith__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssociatedWith__c</fullName>
    <formula>SPEN_Partner__r.SPEN_AssociatedWith__r.SPEN_Land_Contact_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated With</label>
    <type>Text</type>
</CustomField>