force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_AssociationType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssociationType__c</fullName>
    <formula>TEXT(SPEN_Partner__r.SPEN_AssociationType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Association Type</label>
    <type>Text</type>
</CustomField>