force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_Contracting_With__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contracting_With__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contracting With</label>
    <type>Checkbox</type>
</CustomField>