force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_Is_Associated_Type_Person__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Is_Associated_Type_Person__c</fullName>
    <formula>TEXT(SPEN_LandInterest__r.SPEN_Land_Interest_Type__c) =SPEN_AssociationType__c</formula>
    <label>Is Associated Type Person</label>
    <type>Checkbox</type>
</CustomField>