force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_LandInterest__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandInterest__c</fullName>
    <label>Land Right</label>
    <referenceTo>SPEN_Land_Interest__c</referenceTo>
    <relationshipLabel>Partner Associations</relationshipLabel>
    <relationshipName>Partner_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>