force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_Partner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Partner__c</fullName>
    <label>Partner</label>
    <referenceTo>SPEN_LandAssociation__c</referenceTo>
    <relationshipLabel>Partner Associations</relationshipLabel>
    <relationshipName>Partner_Association</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>