force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_PartnerName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PartnerName__c</fullName>
    <formula>SPEN_Partner__r.SPEN_Land_Contact_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>