force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_ProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProcessedDate__c</fullName>
    <label>Processed Date</label>
    <type>Date</type>
</CustomField>