force-app/main/default/objects/SPEN_PartnerAssociation__c/fields/SPEN_VendorNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VendorNumber__c</fullName>
    <formula>SPEN_Partner__r.SPEN_Vendor_Number__c</formula>
    <label>Vendor Number</label>
    <type>Text</type>
</CustomField>