force-app/main/default/objects/SPEN_PartnerAssociation__c/validationRules/SPEN_PartnerLandAssociation.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_PartnerLandAssociation</fullName>
    <active>true</active>
    <errorConditionFormula>SPEN_Partner__r.SPEN_Land__c   &lt;&gt;    SPEN_LandInterest__r.SPEN_Land__c</errorConditionFormula>
    <errorMessage>Selected partner does not belong to the same land as of land Right. Please select the appropriate partner.</errorMessage>
</ValidationRule>