force-app/main/default/objects/SPEN_PartnerAssociation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_LandInterest__c</columns>
    <columns>SPEN_PartnerName__c</columns>
    <columns>SPEN_AssociationType__c</columns>
    <columns>SPEN_AssociatedWith__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>