force-app/main/default/objects/SPEN_PartnerAssociation__c/listViews/SPEN_AlternatePayee.listView-meta.xml
<ListView>
    <fullName>SPEN_AlternatePayee</fullName>
    <columns>SPEN_LandInterest__c</columns>
    <columns>NAME</columns>
    <columns>SPEN_VendorNumber__c</columns>
    <columns>SPEN_AlternativePayeeProcessed__c</columns>
    <columns>SPEN_ProcessedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_AlternativePayeeProcessed__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <filters>
        <field>SPEN_AssociationType__c</field>
        <operation>equals</operation>
        <value>Alternative Payee</value>
    </filters>
    <label>Alternative Payee</label>
    <sharedTo>
        <group>All_LnP_User</group>
    </sharedTo>
</ListView>